traefik/dashboard.yaml
apiVersion: traefik.containo.us/v1aplha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik-system
  spec:
    entryPoints:
      - web
    routes: 
      - match: Host('dashboard.ellison.net')
        kind: Rule
        services:
          - name: api@internal
            kind: TraefikService
